--- a/package.json
+++ b/package.json
@@ -4,25 +4,31 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.44",
+    "@lingui/react": "^2.9.1",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/pickers": "^4.0.0-alpha.7",
+    "add": "^2.0.6",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.3",
+    "lodash.pullat": "^4.6.0",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.6",
+    "moment": "^2.25.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "start": "node server.js",
     "build": "cross-env NODE_ENV=production webpack",
-    "gql-gen": "graphql-codegen --config codegen.yml",
+    "gql": "graphql-codegen --config codegen.yml",
     "check-types": "tsc --noEmit",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
@@ -53,11 +59,17 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@graphql-codegen/cli": "^1.13.4",
+    "@graphql-codegen/typescript": "^1.13.4",
+    "@graphql-codegen/typescript-operations": "^1.13.4",
+    "@graphql-codegen/typescript-react-apollo": "^1.13.4",
+    "@lingui/babel-preset-react": "^2.9.1",
     "@lingui/cli": "^2.9.1",
     "@lingui/macro": "^2.9.1",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__macro": "^2.7.3",
     "@types/lingui__react": "^2.8.2",
+    "@types/lodash.pullat": "^4.6.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -69,6 +81,8 @@
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "file-loader": "^6.0.0",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
     "svgo": "^1.3.2",
