--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
+    "jsx": "preserve",
+    "target": "es2016",
     "module": "esnext",
     "moduleResolution": "node",
-    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "jsx": "react",
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
