--- a/codegen.yml
+++ b/codegen.yml
@@ -8,6 +8,7 @@ config:
   withHooks: true
   reactApolloVersion: 3
   addDocBlocks: false
+  skipTypenames: true
 generates:
   src/graphql/generated/graphql.tsx:
     plugins:
