--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.3",
+    "lodash.omit": "^4.5.0",
     "lodash.pullat": "^4.6.0",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
@@ -69,6 +70,7 @@
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__macro": "^2.7.3",
     "@types/lingui__react": "^2.8.2",
+    "@types/lodash.omit": "^4.5.6",
     "@types/lodash.pullat": "^4.6.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
