--- a/package.json
+++ b/package.json
@@ -3,27 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.44",
+    "@apollo/client": "^3.0.0-rc.0",
+    "@apollo/link-ws": "^2.0.0-beta.3",
     "@lingui/react": "^2.9.1",
-    "@material-ui/core": "^4.9.12",
+    "@material-ui/core": "~4.9.12",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/pickers": "^4.0.0-alpha.7",
-    "add": "^2.0.6",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.3",
     "lodash.omit": "^4.5.0",
-    "lodash.pullat": "^4.6.0",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
-    "moment": "^2.25.1",
+    "moment": "^2.25.3",
     "moment-locales-webpack-plugin": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
-    "yarn": "^1.22.4"
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
@@ -71,7 +70,6 @@
     "@types/lingui__macro": "^2.7.3",
     "@types/lingui__react": "^2.8.2",
     "@types/lodash.omit": "^4.5.6",
-    "@types/lodash.pullat": "^4.6.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
