--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "13.x"
   },
   "dependencies": {
-    "@apollo/client": "^3.0.0-rc.0",
+    "@apollo/client": "^3.2.5",
     "@apollo/link-ws": "^2.0.0-beta.3",
     "@lingui/react": "^2.9.1",
     "@material-ui/core": "~4.9.12",
