feat(#9): add veeery basic login page

--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "body-monitor",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "13.x"
-  },
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@apollo/link-ws": "^2.0.0-beta.3",
     "@lingui/react": "^2.9.1",
-    "@material-ui/core": "~4.9.12",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
-    "@material-ui/pickers": "^4.0.0-alpha.7",
+    "@material-ui/pickers": "^4.0.0-alpha.12",
     "axios": "^0.19.2",
     "lodash.omit": "^4.5.0",
     "mobx": "^5.15.4",
@@ -21,13 +18,14 @@
     "moment-locales-webpack-plugin": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
     "serve": "^11.3.2",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
+    "dev": "cross-env NODE_ENV=development  webpack-dev-server --hot",
     "start": "serve -s build",
     "build": "cross-env NODE_ENV=production webpack",
     "gql": "graphql-codegen --config codegen.yml",
@@ -75,6 +73,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-facebook-login": "^4.1.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/webpack-env": "^1.15.2",
     "babel-core": "^6.26.3",
@@ -82,6 +81,7 @@
     "babel-plugin-macros": "^2.8.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
+    "dotenv-webpack": "^5.0.0",
     "file-loader": "^6.0.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
