chore(#9): improve for login/register page, and confirmation/reset emails

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/pickers": "^4.0.0-alpha.12",
     "axios": "^0.19.2",
+    "emailjs-com": "^2.6.4",
     "lodash.omit": "^4.5.0",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
