--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.5",
-    "@apollo/link-ws": "^2.0.0-beta.3",
+    "@apollo/client": "^3.3.11",
     "@lingui/react": "^2.9.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/pickers": "^4.0.0-alpha.12",
-    "axios": "^0.19.2",
     "emailjs-com": "^2.6.4",
     "lodash.omit": "^4.5.0",
-    "mobx": "^5.15.4",
-    "mobx-react-lite": "^2.0.6",
+    "mobx": "^6.1.7",
+    "mobx-react-lite": "^3.2.0",
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,7 +20,8 @@
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
     "serve": "^11.3.2",
-    "subscriptions-transport-ws": "^0.9.16"
+    "subscriptions-transport-ws": "^0.9.16",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "webpack-dev-server --hot",
@@ -75,6 +74,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-facebook-login": "^4.1.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.15.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
