--- a/package.json
+++ b/package.json
@@ -33,8 +33,17 @@
     "extract": "lingui extract",
     "compile": "lingui compile"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "browserslist": {
     "production": [
@@ -76,14 +85,23 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.15.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-macros": "^2.8.0",
     "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^5.0.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.0.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
     "svgo": "^1.3.2",
