--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "dev": "webpack-dev-server --hot",
+    "dev": "env-cmd webpack-dev-server --hot",
     "start": "serve -s build",
     "build": "webpack",
     "gql": "graphql-codegen --config codegen.yml",
@@ -92,6 +92,7 @@
     "babel-plugin-macros": "^2.8.0",
     "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^5.0.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
