--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@lingui/react": "^2.9.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/pickers": "^4.0.0-alpha.12",
     "emailjs-com": "^2.6.4",
@@ -90,6 +90,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-macros": "^2.8.0",
+    "clsx": "^1.1.1",
     "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^5.0.0",
     "env-cmd": "^10.1.0",
