--- a/package.json
+++ b/package.json
@@ -67,10 +67,10 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@graphql-codegen/cli": "^1.13.4",
-    "@graphql-codegen/typescript": "^1.13.4",
-    "@graphql-codegen/typescript-operations": "^1.13.4",
-    "@graphql-codegen/typescript-react-apollo": "^1.13.4",
+    "@graphql-codegen/cli": "^2.2.0",
+    "@graphql-codegen/typescript": "^2.2.2",
+    "@graphql-codegen/typescript-operations": "^2.1.4",
+    "@graphql-codegen/typescript-react-apollo": "3.1.4",
     "@lingui/babel-preset-react": "^2.9.1",
     "@lingui/cli": "^2.9.1",
     "@lingui/macro": "^2.9.1",
