--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "mobx": "^6.1.7",
     "mobx-react-lite": "^3.2.0",
     "moment": "^2.25.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
+    "react-relay": "^12.0.0",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
     "serve": "^11.3.2",
-    "subscriptions-transport-ws": "^0.9.16",
+    "subscriptions-transport-ws": "~0.10.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -31,7 +32,8 @@
     "check-types": "tsc --noEmit",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
-    "compile": "lingui compile"
+    "compile": "lingui compile",
+    "relay": "relay-compiler --src ./src --schema ./src/graphql/schema.graphql --language typescript "
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -60,7 +62,6 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -82,7 +83,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-facebook-login": "^4.1.2",
+    "@types/react-relay": "^11.0.3",
     "@types/react-router-dom": "^5.1.5",
+    "@types/relay-runtime": "^12.0.1",
     "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
@@ -90,6 +93,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-relay": "^12.0.0",
     "clsx": "^1.1.1",
     "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^5.0.0",
@@ -106,9 +110,10 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
-    "svgo": "^1.3.2",
-    "svgo-loader": "^2.2.1",
-    "typescript": "~3.7.2",
+    "relay-compiler": "^12.0.0",
+    "relay-compiler-language-typescript": "^15.0.0",
+    "relay-config": "^12.0.1",
+    "typescript": "^4.5.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
