--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "graphql-tag": "^2.10.3",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
     "relay-compiler": "^12.0.0",
