--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.9",
     "serve": "^13.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vite-plugin-babel-macros": "^1.0.6"
   },
   "scripts": {
-    "dev": "env-cmd webpack-dev-server --hot",
+    "dev": "vite --https --port 4200",
     "start": "serve -s build",
-    "build": "webpack",
+    "build": "vite build",
     "check-types": "tsc --noEmit",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
@@ -82,6 +83,7 @@
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "@vitejs/plugin-react": "^1.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.4",
     "babel-plugin-macros": "^3.1.0",
@@ -107,6 +109,8 @@
     "relay-compiler-language-typescript": "^15.0.1",
     "relay-config": "^12.0.1",
     "typescript": "^4.6.3",
+    "vite": "^2.9.1",
+    "vite-plugin-relay": "^1.0.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
