--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "dev": "vite --https --port 4200",
-    "start": "serve -s build",
+    "start": "serve -s dist",
     "build": "vite build",
     "check-types": "tsc --noEmit",
     "add-locale": "lingui add-locale",
