--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
     "compile": "lingui compile",
-    "relay": "relay-compiler --src ./src --schema ./src/graphql/schema.graphql"
+    "relay": "relay-compiler"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -106,7 +106,6 @@
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
     "relay-compiler": "^13.2.0",
-    "relay-compiler-language-typescript": "^15.0.1",
     "relay-config": "^12.0.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.1",
