--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/pickers": "^4.0.0-alpha.12",
-    "core-js": "^3.21.1",
     "emailjs-com": "^2.6.4",
     "mobx": "^6.1.7",
     "mobx-react-lite": "^3.2.0",
@@ -58,14 +57,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
     "@lingui/babel-preset-react": "^2.9.1",
     "@lingui/cli": "^2.9.1",
     "@lingui/macro": "^2.9.1",
@@ -80,38 +75,23 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/relay-runtime": "^13.0.3",
     "@types/uuid": "^8.3.0",
-    "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "@vitejs/plugin-react": "^1.3.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.4",
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-relay": "^13.2.0",
     "clsx": "^1.1.1",
-    "copy-webpack-plugin": "^5.1.1",
-    "dotenv-webpack": "^5.0.0",
-    "env-cmd": "^10.1.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.0.0",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
-    "moment-locales-webpack-plugin": "^1.2.0",
     "prettier": "^2.0.5",
-    "raw-loader": "^4.0.1",
     "relay-compiler": "^13.2.0",
-    "relay-config": "^12.0.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.1",
-    "vite-plugin-relay": "^1.0.7",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "vite-plugin-relay": "^1.0.7"
   }
 }
