--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "start": "serve -s dist",
     "build": "vite build",
     "check-types": "tsc --noEmit",
-    "add-locale": "lingui add-locale",
-    "extract": "lingui extract",
-    "compile": "lingui compile",
+    "messages": "lingui extract && lingui compile",
     "relay": "relay-compiler"
   },
   "lint-staged": {
@@ -61,12 +59,9 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@lingui/babel-preset-react": "^2.9.1",
-    "@lingui/cli": "^2.9.1",
-    "@lingui/macro": "^2.9.1",
-    "@types/lingui__core": "^2.7.0",
-    "@types/lingui__macro": "^2.7.3",
-    "@types/lingui__react": "^2.8.2",
+    "@babel/preset-typescript": "^7.16.7",
+    "@lingui/cli": "^3.13.2",
+    "@lingui/macro": "^3.13.2",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
