--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "regenerator-runtime": "^0.13.9",
     "serve": "^13.0.2",
     "uuid": "^8.3.2",
-    "vite-plugin-babel-macros": "^1.0.6"
+    "vite-plugin-babel-macros": "^1.0.6",
+    "@vitejs/plugin-react": "^1.3.0"
   },
   "scripts": {
     "dev": "vite --https --port 4200",
@@ -72,7 +73,6 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
-    "@vitejs/plugin-react": "^1.3.0",
     "clsx": "^1.1.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
