--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "serve": "^13.0.2",
     "uuid": "^8.3.2",
     "vite-plugin-babel-macros": "^1.0.6",
-    "@vitejs/plugin-react": "^1.3.0"
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite-plugin-relay": "^1.0.7"
   },
   "scripts": {
     "dev": "vite --https --port 4200",
@@ -86,7 +87,6 @@
     "prettier": "^2.0.5",
     "relay-compiler": "^13.2.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.1",
-    "vite-plugin-relay": "^1.0.7"
+    "vite": "^2.9.1"
   }
 }
