--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.9",
     "serve": "^13.0.2",
-    "uuid": "^8.3.2",
-    "vite-plugin-babel-macros": "^1.0.6",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite-plugin-relay": "^1.0.7"
+    "uuid": "^8.3.2"
   },
   "scripts": {
-    "dev": "vite --https --port 4200",
-    "start": "serve -s dist",
+    "start": "vite --https --port 4200",
     "build": "vite build",
+    "serve": "serve -s dist",
     "check-types": "tsc --noEmit",
     "messages": "lingui extract && lingui compile",
     "relay": "relay-compiler"
@@ -57,6 +54,9 @@
     ]
   },
   "devDependencies": {
+    "vite-plugin-babel-macros": "^1.0.6",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite-plugin-relay": "^1.0.7",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
