--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/pickers": "^4.0.0-alpha.12",
     "emailjs-com": "^2.6.4",
-    "mobx": "^6.1.7",
-    "mobx-react-lite": "^3.2.0",
     "moment": "^2.25.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -54,9 +52,6 @@
     ]
   },
   "devDependencies": {
-    "vite-plugin-babel-macros": "^1.0.6",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite-plugin-relay": "^1.0.7",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
@@ -73,6 +68,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "@vitejs/plugin-react": "^1.3.0",
     "clsx": "^1.1.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
@@ -86,6 +82,8 @@
     "prettier": "^2.0.5",
     "relay-compiler": "^13.2.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.1"
+    "vite": "^2.9.1",
+    "vite-plugin-babel-macros": "^1.0.6",
+    "vite-plugin-relay": "^1.0.7"
   }
 }
