--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "regenerator-runtime": "^0.13.5",
     "serve": "^11.3.2",
     "subscriptions-transport-ws": "^0.9.16",
+    "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^5.0.0",
     "webpack-cli": "^3.3.11",
     "webpack": "^4.43.0",
