--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "dotenv-webpack": "^5.0.0",
     "webpack-cli": "^3.3.11",
     "webpack": "^4.43.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "raw-loader": "^4.0.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-macros": "^2.8.0",
+    "file-loader": "^6.0.0"
   },
   "scripts": {
     "dev": "env-cmd webpack-dev-server --hot",
@@ -91,9 +96,6 @@
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-macros": "^2.8.0",
     "clsx": "^1.1.1",
     "copy-webpack-plugin": "^5.1.1",
     "env-cmd": "^10.1.0",
@@ -102,7 +104,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.0.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "husky": "^6.0.0",
