--- a/package.json
+++ b/package.json
@@ -30,7 +30,21 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-macros": "^2.8.0",
-    "file-loader": "^6.0.0"
+    "file-loader": "^6.0.0",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "graphql-tag": "^2.10.3",
+    "raw-loader": "^4.0.1",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1"
   },
   "scripts": {
     "dev": "env-cmd webpack-dev-server --hot",
@@ -67,15 +81,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
     "@graphql-codegen/cli": "^2.2.0",
     "@graphql-codegen/typescript": "^2.2.2",
     "@graphql-codegen/typescript-operations": "^2.1.4",
@@ -97,7 +102,6 @@
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "clsx": "^1.1.1",
-    "copy-webpack-plugin": "^5.1.1",
     "env-cmd": "^10.1.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
@@ -105,13 +109,9 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "graphql": "^15.0.0",
-    "graphql-tag": "^2.10.3",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.0.5",
-    "raw-loader": "^4.0.1",
-    "svgo": "^1.3.2",
-    "svgo-loader": "^2.2.1",
     "typescript": "~3.7.2",
     "webpack-dev-server": "^3.10.3"
   }
