--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "graphql-tag": "^2.10.3",
     "raw-loader": "^4.0.1",
     "svgo": "^1.3.2",
-    "svgo-loader": "^2.2.1"
+    "svgo-loader": "^2.2.1",
+    "@lingui/babel-preset-react": "^2.9.1"
   },
   "scripts": {
     "dev": "env-cmd webpack-dev-server --hot",
@@ -85,7 +86,6 @@
     "@graphql-codegen/typescript": "^2.2.2",
     "@graphql-codegen/typescript-operations": "^2.1.4",
     "@graphql-codegen/typescript-react-apollo": "3.1.4",
-    "@lingui/babel-preset-react": "^2.9.1",
     "@lingui/cli": "^2.9.1",
     "@lingui/macro": "^2.9.1",
     "@types/lingui__core": "^2.7.0",
