--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "raw-loader": "^4.0.1",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
-    "@lingui/babel-preset-react": "^2.9.1"
+    "@lingui/babel-preset-react": "^2.9.1",
+    "@lingui/macro": "^2.9.1"
   },
   "scripts": {
     "dev": "env-cmd webpack-dev-server --hot",
@@ -55,7 +56,9 @@
     "check-types": "tsc --noEmit",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
-    "compile": "lingui compile"
+    "compile": "lingui compile",
+    "clsx": "^1.1.1",
+    "graphql": "^15.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -87,7 +90,6 @@
     "@graphql-codegen/typescript-operations": "^2.1.4",
     "@graphql-codegen/typescript-react-apollo": "3.1.4",
     "@lingui/cli": "^2.9.1",
-    "@lingui/macro": "^2.9.1",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__macro": "^2.7.3",
     "@types/lingui__react": "^2.8.2",
@@ -101,14 +103,12 @@
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
-    "clsx": "^1.1.1",
     "env-cmd": "^10.1.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "graphql": "^15.0.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.0.5",
