--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "regenerator-runtime": "^0.13.5",
     "serve": "^11.3.2",
     "subscriptions-transport-ws": "^0.9.16",
-    "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^5.0.0",
     "webpack-cli": "^3.3.11",
     "webpack": "^4.43.0",
@@ -42,11 +41,12 @@
     "@babel/preset-typescript": "^7.9.0",
     "copy-webpack-plugin": "^5.1.1",
     "graphql-tag": "^2.10.3",
-    "raw-loader": "^4.0.1",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "@lingui/babel-preset-react": "^2.9.1",
-    "@lingui/macro": "^2.9.1"
+    "@lingui/macro": "^2.9.1",
+    "clsx": "^1.1.1",
+    "graphql": "^15.0.0"
   },
   "scripts": {
     "dev": "env-cmd webpack-dev-server --hot",
@@ -57,8 +57,7 @@
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
     "compile": "lingui compile",
-    "clsx": "^1.1.1",
-    "graphql": "^15.0.0"
+
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
