fix(build): remove comma

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "check-types": "tsc --noEmit",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
-    "compile": "lingui compile",
+    "compile": "lingui compile"
 
   },
   "lint-staged": {
