--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "physique.one",
   "version": "0.1.0",
   "private": true,
+  "engines" : {
+    "node" : ">=16.0.0"
+  },
   "dependencies": {
     "@lingui/react": "^3.13.2",
     "@material-ui/core": "^4.12.3",
