--- a/package.json
+++ b/package.json
@@ -17,10 +17,23 @@
     "react-dom": "^18.1.0",
     "react-facebook-login": "^4.1.1",
     "react-relay": "^13.2.0",
+    "relay-compiler": "^13.2.0",
     "react-router-dom": "^6.3.0",
     "regenerator-runtime": "^0.13.9",
     "serve": "^13.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vite": "^2.9.1",
+    "vite-plugin-babel-macros": "^1.0.6",
+    "vite-plugin-relay": "^1.0.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-typescript": "^7.16.7",
+    "@vitejs/plugin-react": "^1.3.0",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
+    "clsx": "^1.1.1"
   },
   "scripts": {
     "start": "vite --https --port 4200",
@@ -55,11 +68,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-typescript": "^7.16.7",
     "@lingui/cli": "^3.13.2",
     "@lingui/macro": "^3.13.2",
     "@types/node": "^12.0.0",
@@ -71,22 +79,14 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
-    "@vitejs/plugin-react": "^1.3.0",
-    "clsx": "^1.1.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "graphql": "^16.3.0",
-    "graphql-tag": "^2.12.6",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.0.5",
-    "relay-compiler": "^13.2.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.1",
-    "vite-plugin-babel-macros": "^1.0.6",
-    "vite-plugin-relay": "^1.0.7"
+    "typescript": "^4.6.3"
   }
 }
