--- a/package.json
+++ b/package.json
@@ -2,44 +2,12 @@
   "name": "physique.one",
   "version": "0.1.0",
   "private": true,
-  "engines" : {
-    "node" : ">=16.0.0"
-  },
-  "dependencies": {
-    "@lingui/react": "^3.13.2",
-    "@lingui/macro": "^3.13.2",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.55",
-    "@material-ui/pickers": "^4.0.0-alpha.12",
-    "emailjs-com": "^2.6.4",
-    "moment": "^2.25.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-facebook-login": "^4.1.1",
-    "react-relay": "^13.2.0",
-    "relay-compiler": "^13.2.0",
-    "react-router-dom": "6.1.0",
-    "regenerator-runtime": "^0.13.9",
-    "serve": "^13.0.2",
-    "uuid": "^8.3.2",
-    "vite": "^2.9.1",
-    "vite-plugin-babel-macros": "^1.0.6",
-    "vite-plugin-relay": "^1.0.7",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-typescript": "^7.16.7",
-    "@vitejs/plugin-react": "^1.3.0",
-    "graphql": "^16.3.0",
-    "graphql-tag": "^2.12.6",
-    "clsx": "^1.1.1"
+  "engines": {
+    "node": ">=16.0.0"
   },
   "scripts": {
-    "start": "vite --https --port 4200",
+    "start": "vite",
     "build": "vite build",
-    "serve": "serve -s dist",
     "check-types": "tsc --noEmit",
     "messages": "lingui extract && lingui compile",
     "relay": "relay-compiler"
@@ -68,17 +36,49 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.19.4",
+    "@lingui/macro": "^3.13.2",
+    "@lingui/react": "^3.13.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.55",
+    "@material-ui/pickers": "^4.0.0-alpha.12",
+    "@vitejs/plugin-react": "^2.1.0",
+    "clsx": "^1.1.1",
+    "emailjs-com": "^2.6.4",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "moment": "^2.25.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-facebook-login": "^4.1.1",
+    "react-relay": "^14.1.0",
+    "react-router-dom": "6.4.2",
+    "regenerator-runtime": "^0.13.9",
+    "relay-compiler": "^14.1.0",
+    "uuid": "^8.3.2",
+    "vite": "^3.1.7",
+    "vite-plugin-babel-macros": "^1.0.6",
+    "vite-plugin-relay": "^2.0.0"
+  },
   "devDependencies": {
     "@lingui/cli": "^3.13.2",
-    "@types/node": "^12.0.0",
+    "@types/node": "^18.8.4",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "@types/react-facebook-login": "^4.1.2",
-    "@types/react-relay": "^13.0.2",
-    "@types/relay-runtime": "^13.0.3",
+    "@types/react-relay": "^14.1.2",
+    "@types/relay-runtime": "^14.1.3",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-plugin-relay": "^14.1.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
